force-app/main/default/objects/Object_2__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Object 2</relationshipLabel>
    <relationshipName>Object_2</relationshipName>
    <type>Lookup</type>
</CustomField>