force-app/main/default/objects/Object_2__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Object 2</relationshipLabel>
    <relationshipName>Object_2</relationshipName>
    <type>Lookup</type>
</CustomField>