force-app/main/default/objects/Object_2__c/fields/Checkbox_check__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox check</label>
    <type>Checkbox</type>
</CustomField>