force-app/main/default/objects/Object_2__c/fields/Form_Category__c.field-meta.xml
<CustomField>
    <fullName>Form_Category__c</fullName>
    <description>Admission
Nursing</description>
    <label>Form Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admission</fullName>
            </value>
            <value>
                <fullName>Nursing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>