force-app/main/default/objects/Object_2__c/fields/Form_RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_RecordType_Name__c</fullName>
    <label>Form RecordType Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>