force-app/main/default/objects/Object_2__c/fields/Form_unique_id__c.field-meta.xml
<CustomField>
    <fullName>Form_unique_id__c</fullName>
    <label>Form unique id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>