force-app/main/default/objects/Object_2__c/fields/Integer_1__c.field-meta.xml
<CustomField>
    <fullName>Integer_1__c</fullName>
    <label>Integer 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>