force-app/main/default/objects/Object_2__c/fields/Integer_3__c.field-meta.xml
<CustomField>
    <fullName>Integer_3__c</fullName>
    <label>Integer 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>