force-app/main/default/objects/Object_2__c/fields/Integer_4__c.field-meta.xml
<CustomField>
    <fullName>Integer_4__c</fullName>
    <label>Integer 4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>