force-app/main/default/objects/Object_2__c/fields/Is_Diabetic__c.field-meta.xml
<CustomField>
    <fullName>Is_Diabetic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Diabetic</label>
    <type>Checkbox</type>
</CustomField>