force-app/main/default/objects/Object_2__c/fields/Medical_Examination__c.field-meta.xml
<CustomField>
    <fullName>Medical_Examination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medical Examination</label>
    <referenceTo>Medical_Examination__c</referenceTo>
    <relationshipLabel>Object 2</relationshipLabel>
    <relationshipName>Object_2</relationshipName>
    <type>Lookup</type>
</CustomField>