force-app/main/default/objects/Object_2__c/fields/Patient_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name_1__c</fullName>
    <label>Patient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>