force-app/main/default/objects/Object_2__c/fields/phone_field__c.field-meta.xml
<CustomField>
    <fullName>phone_field__c</fullName>
    <label>phone field</label>
    <type>Phone</type>
</CustomField>