force-app/main/default/objects/Object_2__c/fields/Picklist_1__c.field-meta.xml
<CustomField>
    <fullName>Picklist_1__c</fullName>
    <label>Picklist 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Candy</fullName>
            </value>
            <value>
                <fullName>Cotton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>