force-app/main/default/objects/Object_2__c/fields/Problem_Details__c.field-meta.xml
<CustomField>
    <fullName>Problem_Details__c</fullName>
    <label>Problem Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>