force-app/main/default/objects/Object_2__c/fields/Select_City__c.field-meta.xml
<CustomField>
    <fullName>Select_City__c</fullName>
    <label>Select City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Select_State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meerut</fullName>
            </value>
            <value>
                <fullName>Noida</fullName>
            </value>
            <value>
                <fullName>Kanpur</fullName>
            </value>
            <value>
                <fullName>Dehradun</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>