force-app/main/default/objects/Object_2__c/fields/Select_State__c.field-meta.xml
<CustomField>
    <fullName>Select_State__c</fullName>
    <label>Select State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uttar Pradesh</fullName>
            </value>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Rajasthan</fullName>
            </value>
            <value>
                <fullName>Uttarakhand</fullName>
            </value>
            <value>
                <fullName>Himachal Pradesh</fullName>
            </value>
            <value>
                <fullName>Northern Cape</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>