force-app/main/default/objects/Object_2__c/fields/Subjective__c.field-meta.xml
<CustomField>
    <fullName>Subjective__c</fullName>
    <label>Subjective</label>
    <type>TextArea</type>
</CustomField>