force-app/main/default/objects/Object_2__c/fields/Test_Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Formula_Field__c</fullName>
    <formula>&quot;This is a formula field&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Formula Field</label>
    <type>Text</type>
</CustomField>