force-app/main/default/objects/Object_2__c/fields/Trouble_Sleeping__c.field-meta.xml
<CustomField>
    <fullName>Trouble_Sleeping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trouble Sleeping</label>
    <type>Checkbox</type>
</CustomField>