force-app/main/default/objects/Object_2__c/recordTypes/EHR_Form_Debugging_Nursing.recordType-meta.xml
<RecordType>
    <fullName>EHR_Form_Debugging_Nursing</fullName>
    <active>false</active>
    <label>Debugging</label>
</RecordType>