force-app/main/default/objects/Object_2__c/recordTypes/EHR_Form_Demo1_Nursing.recordType-meta.xml
<RecordType>
    <fullName>EHR_Form_Demo1_Nursing</fullName>
    <active>true</active>
    <label>Demo1</label>
</RecordType>