force-app/main/default/objects/Object_2__c/recordTypes/EHR_Form_DemoTest_Nursing.recordType-meta.xml
<RecordType>
    <fullName>EHR_Form_DemoTest_Nursing</fullName>
    <active>true</active>
    <label>DemoTest</label>
</RecordType>