force-app/main/default/objects/Object_2__c/recordTypes/EHR_Form_Feature_Testing_Nursing.recordType-meta.xml
<RecordType>
    <fullName>EHR_Form_Feature_Testing_Nursing</fullName>
    <active>true</active>
    <label>Feature Testing</label>
</RecordType>