force-app/main/default/objects/Object_2__c/recordTypes/EHR_Form_Form_testing_Nursing.recordType-meta.xml
<RecordType>
    <fullName>EHR_Form_Form_testing_Nursing</fullName>
    <active>true</active>
    <label>Form testing</label>
</RecordType>