force-app/main/default/objects/Object_2__c/recordTypes/EHR_Form_Independence_day_NursingForms.recordType-meta.xml
<RecordType>
    <fullName>EHR_Form_Independence_day_NursingForms</fullName>
    <active>true</active>
    <label>Independence day</label>
</RecordType>