force-app/main/default/objects/Object_2__c/recordTypes/EHR_Form_Meghna_Test_Record_Form.recordType-meta.xml
<RecordType>
    <fullName>EHR_Form_Meghna_Test_Record_Form</fullName>
    <active>true</active>
    <label>Meghna Test Record</label>
</RecordType>