force-app/main/default/objects/Object_2__c/recordTypes/EHR_Form_NewForm_Testing_Nursing.recordType-meta.xml
<RecordType>
    <fullName>EHR_Form_NewForm_Testing_Nursing</fullName>
    <active>false</active>
    <label>NewForm Testing</label>
</RecordType>