force-app/main/default/objects/Object_2__c/recordTypes/EHR_Form_Test_Object_Form.recordType-meta.xml
<RecordType>
    <fullName>EHR_Form_Test_Object_Form</fullName>
    <active>true</active>
    <label>Test Object</label>
</RecordType>