force-app/main/default/objects/Object_2__c/recordTypes/EHR_Form_Test_Rec_Type.recordType-meta.xml
<RecordType>
    <fullName>EHR_Form_Test_Rec_Type</fullName>
    <active>true</active>
    <label>Test Rec Type</label>
</RecordType>