force-app/main/default/objects/Object_2__c/recordTypes/EHR_Form_Version_Testing_NursingForms.recordType-meta.xml
<RecordType>
    <fullName>EHR_Form_Version_Testing_NursingForms</fullName>
    <active>true</active>
    <label>Version Testing</label>
</RecordType>