force-app/main/default/objects/Object_2__c/recordTypes/Feature_Testing_3_0.recordType-meta.xml
<RecordType>
    <fullName>Feature_Testing_3_0</fullName>
    <active>true</active>
    <label>Feature Testing 3.0</label>
</RecordType>